fix: encapsulate scrollbar styles within hover media query for improved responsiveness

--- a/style.css
+++ b/style.css
@@ -8,34 +8,35 @@ body {
   overflow-x: hidden;
 }
 
-body::-webkit-scrollbar {
-  appearance: none;
-  width: 15px;
-  background: linear-gradient(to bottom, white, aliceblue);
-}
+@media (hover:hover) {
+  body::-webkit-scrollbar {
+    appearance: none;
+    width: 15px;
+    background: linear-gradient(to bottom, white, aliceblue);
+  }
 
-body::-webkit-scrollbar-track {
-  background-color: #034baafa;
-}
+  body::-webkit-scrollbar-track {
+    background-color: #034baafa;
+  }
 
-body::-webkit-scrollbar-thumb {
-  cursor: pointer;
-  appearance: none;
-  width: 15px;
-  border-radius: 10px;
-  background-color: #034baafa;
-}
+  body::-webkit-scrollbar-thumb {
+    cursor: pointer;
+    appearance: none;
+    width: 15px;
+    border-radius: 10px;
+    background-color: #034baafa;
+  }
 
-body::-webkit-scrollbar-thumb:hover {
-  border-style: dashed;
-  border-color: white;
-  border-width: 1px;
-}
+  body::-webkit-scrollbar-thumb:hover {
+    border-style: dashed;
+    border-color: white;
+    border-width: 1px;
+  }
 
-body::-webkit-scrollbar-thumb:active {
-  background-color: rgb(202, 223, 253);
+  body::-webkit-scrollbar-thumb:active {
+    background-color: rgb(202, 223, 253);
+  }
 }
-
 
 .frame {
   font-family: Arial;
